--- a/R/data_collection_trackers.Rmd
+++ b/R/data_collection_trackers.Rmd
@@ -8,12 +8,11 @@ output:
 toc_float:
     collapsed: false
 smooth_scroll: false
-knit: (function(inputFile, encoding) { rmarkdown::render(inputFile, encoding = encoding, output_file = paste0(dirname(inputFile), '/eth_lcsa_somali_data_collection_tracker_', format(Sys.Date(), '%Y_%m_%d'),'.html')) })
+knit: (function(inputFile, encoding) {rmarkdown::render(inputFile, encoding = encoding, output_file = paste0(dirname(inputFile), '/eth_lcsa_somali_data_collection_tracker_', format(Sys.Date(), '%Y_%m_%d'),'.html')) })
 ---
     
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = F, message = F)
-
 # read packages
 library(tidyverse)
 library(lubridate)
@@ -59,9 +58,8 @@ df_updated_tool_data <- df_tool_data
 
 # get uuids from cleaning log
 uuids_chg_response <- cl_log_change_response |> pull(uuid) |> unique()
-
 for (current_uuid in uuids_chg_response) {
-    current_uuid_data <- cl_log_change_response |> 
+     current_uuid_data <- cl_log_change_response |> 
         filter(uuid == current_uuid) |> 
         mutate(value = ifelse(name == "enumerator_id", as.numeric(value), value)) |> 
         pivot_wider(names_from = "name", values_from = "value", uuid)
@@ -93,7 +91,6 @@ df_samples_required <- readxl::read_excel("../support_files/lcsa_sample_size.xls
 
 # tool
 loc_tool <- "../inputs/REACH_ETH_LCSA_Somali_tool.xlsx"
-
 df_survey <- readxl::read_excel(loc_tool, sheet = "survey")
 df_choices <- readxl::read_excel(loc_tool, sheet = "choices") |> 
     mutate(code = name, label = `label::English`)
@@ -120,7 +117,6 @@ df_zone_to_kebele_info <- df_choices |>
   select(-c(zone_code, woreda_code))
 
 # functions for changing some options in the table
-
 dt_options_fewcols <- function(x){
     DT::datatable(x,
                   rownames = FALSE,
@@ -133,7 +129,6 @@ dt_options_fewcols <- function(x){
               )
     )
 }
-
 ```
 
 ## Summary on the surveys done
@@ -145,10 +140,9 @@ Last date of data collection: **`r df_days_for_data_collection[length(df_days_fo
 ### Summary on the surveys per location
 
 ```{r, echo = FALSE}
-
 df_samp_per_location <- df_samples_required
-
 df_updated_tool_data |> 
+    #filter(pop_group == "host") |> 
     group_by(hh_kebele) |> 
     summarise(number_of_surveys = n()) |> 
     arrange(hh_kebele) |> 
@@ -161,7 +155,6 @@ df_updated_tool_data |>
            remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
     select(-c(int.surveys_and_deletion)) |> 
     dt_options_fewcols()
-
 ```
 
 ### Daily enumerator performance
@@ -216,7 +209,7 @@ df_cl_log |>
 
 ```{r, echo = FALSE}
 df_cl_log |> 
-    filter(type %in% c("remove_survey"), reviewed == 1, !adjust_log %in% c("delete_log")) |> 
+  filter(type %in% c("remove_survey"), reviewed == 1, !adjust_log %in% c("delete_log")) |> 
     group_by(enumerator_id) |> 
     summarise(number_of_surveys_for_deletion_by_enumerator = n()) |>
     dt_options_fewcols()
