--- a/R/data_collection_trackers.Rmd
+++ b/R/data_collection_trackers.Rmd
@@ -142,41 +142,51 @@ Last date of data collection: **`r df_days_for_data_collection[length(df_days_fo
 ### Host community: **`r df_updated_tool_data %>% filter(pop_group == "host") %>% nrow()`** surveys
 
 ```{r, echo = FALSE}
-df_samp_per_location <- df_samples_required
+df_samp_per_location <- df_samples_required |> 
+  group_by(hh_kebele) |> 
+  summarise(required_samples = n())
 df_updated_tool_data |> 
-    filter(pop_group == "host") |> 
-    group_by(hh_kebele) |> 
-    summarise(number_of_surveys = n()) |> 
-    arrange(hh_kebele) |> 
-    full_join(df_samp_per_location, by = c("hh_kebele" = "hh_kebele")) |>
-    mutate(required_samples = ifelse(is.na(required_samples), 0, required_samples)) |> 
-    left_join(df_cl_surveys_for_deletion, by = "hh_kebele") |> 
-    mutate(number_of_surveys = ifelse(is.na(number_of_surveys), 0, number_of_surveys),
-           surveys_for_deletion = ifelse(is.na(surveys_for_deletion), 0, surveys_for_deletion),
-           int.surveys_and_deletion = number_of_surveys - surveys_for_deletion,
-           remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
-    select(-c(int.surveys_and_deletion)) |> 
-    dt_options_fewcols()
+  filter(pop_group == "host") |> 
+  group_by(hh_kebele) |> 
+  summarise(number_of_surveys = n()) |> 
+  arrange(hh_kebele) |>  
+  full_join(df_samp_per_location, by = c("hh_kebele" = "hh_kebele")) |> 
+  mutate(required_samples = ifelse(is.na(required_samples), 0, required_samples)) |> 
+  left_join(df_cl_surveys_for_deletion, by = c("hh_kebele" = "hh_kebele")) |> 
+  mutate(number_of_surveys = ifelse(is.na(number_of_surveys), 0, number_of_surveys),
+         surveys_for_deletion = ifelse(is.na(surveys_for_deletion), 0, surveys_for_deletion),
+         int.surveys_and_deletion = number_of_surveys - surveys_for_deletion,
+         remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
+  select(-c(int.surveys_and_deletion)) |> 
+  mutate(hh_kebele = as.character(hh_kebele)) |> 
+  left_join(df_zone_to_kebele_info, by = c("hh_kebele" = "code")) |> 
+  relocate(c(zone, woreda, hh_kebele, kebele), .before = number_of_surveys) |>
+  dt_options_fewcols()
 ```
 
-### IDP community: **`r df_updated_tool_data %>% filter(pop_group == "idp") %>% nrow()`** surveys
+### IDPs community: **`r df_updated_tool_data %>% filter(pop_group == "idp") %>% nrow()`** surveys
 
 ```{r, echo = FALSE}
-df_samp_per_location <- df_samples_required
+df_samp_per_location <- df_samples_required |> 
+  group_by(hh_kebele) |> 
+  summarise(required_samples = n())
 df_updated_tool_data |> 
-    filter(pop_group == "idp") |> 
-    group_by(hh_kebele) |> 
-    summarise(number_of_surveys = n()) |> 
-    arrange(hh_kebele) |> 
-    full_join(df_samp_per_location, by = c("hh_kebele" = "hh_kebele")) |>
-    mutate(required_samples = ifelse(is.na(required_samples), 0, required_samples)) |> 
-    left_join(df_cl_surveys_for_deletion, by = "hh_kebele") |> 
-    mutate(number_of_surveys = ifelse(is.na(number_of_surveys), 0, number_of_surveys),
-           surveys_for_deletion = ifelse(is.na(surveys_for_deletion), 0, surveys_for_deletion),
-           int.surveys_and_deletion = number_of_surveys - surveys_for_deletion,
-           remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
-    select(-c(int.surveys_and_deletion)) |> 
-    dt_options_fewcols()
+  filter(pop_group == "idp") |> 
+  group_by(hh_kebele) |> 
+  summarise(number_of_surveys = n()) |> 
+  arrange(hh_kebele) |>  
+  full_join(df_samp_per_location, by = c("hh_kebele" = "hh_kebele")) |> 
+  mutate(required_samples = ifelse(is.na(required_samples), 0, required_samples)) |> 
+  left_join(df_cl_surveys_for_deletion, by = c("hh_kebele" = "hh_kebele")) |> 
+  mutate(number_of_surveys = ifelse(is.na(number_of_surveys), 0, number_of_surveys),
+         surveys_for_deletion = ifelse(is.na(surveys_for_deletion), 0, surveys_for_deletion),
+         int.surveys_and_deletion = number_of_surveys - surveys_for_deletion,
+         remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
+  select(-c(int.surveys_and_deletion)) |> 
+  mutate(hh_kebele = as.character(hh_kebele)) |> 
+  left_join(df_zone_to_kebele_info, by = c("hh_kebele" = "code")) |> 
+  relocate(c(zone, woreda, hh_kebele, kebele), .before = number_of_surveys) |>
+  dt_options_fewcols()
 ```
 
 ### Daily enumerator performance
@@ -185,8 +195,17 @@ The average survey time for all the data is: **`r get_average_survey_time(df_upd
 
 ```{r, echo = FALSE}
 df_enum_performance |> 
-  group_by(hh_zone, hh_woreda, hh_kebele, start_date, enumerator_id) |> 
+group_by(hh_zone, hh_woreda, hh_kebele, start_date, enumerator_id) |>
   summarise(number_of_interviews_done = n(), `average_survey_time(minutes)` = round(mean(int.survey_time_interval, na.rm = TRUE), 0)) |> 
+  left_join(df_zone_info, by = c("hh_zone" = "code")) |> 
+  relocate(zone, .after = hh_zone) |> 
+  left_join(df_woreda_info, by = c("hh_woreda" = "code")) |> 
+  relocate(woreda, .after = hh_woreda) |>
+  mutate(hh_kebele = as.character(hh_kebele)) |> 
+  left_join(df_kebele_info, by = c("hh_kebele" = "code")) |> 
+  relocate(kebele, .after = hh_kebele) |>
+  ungroup() |> 
+  select(-c(hh_zone, hh_woreda)) |> 
   dt_options_fewcols()
 ```
 
