--- a/R/data_collection_trackers.Rmd
+++ b/R/data_collection_trackers.Rmd
@@ -87,34 +87,13 @@ df_cl_surveys_for_deletion <- df_cl_deletion |>
 
 # sample data
 df_samples_required <- readxl::read_excel("../support_files/lcsa_sample_size.xlsx") |> 
-    select(hh_kebele, required_samples = tot_sample_size)
+    select(hh_kebele, pop_group, required_samples = tot_sample_size)
 
 # tool
 loc_tool <- "../inputs/REACH_ETH_LCSA_Somali_tool.xlsx"
 df_survey <- readxl::read_excel(loc_tool, sheet = "survey")
 df_choices <- readxl::read_excel(loc_tool, sheet = "choices") |> 
     mutate(code = name, label = `label::English`)
-
-# extract location labels
-df_zone_info <- df_choices |> 
-  filter(list_name %in% c("zone")) |> 
-  select(code, zone = label)
-df_woreda_info <- df_choices |> 
-  filter(list_name %in% c("woreda")) |> 
-  select(code, woreda = label)
-df_kebele_info <- df_choices |> 
-  filter(list_name %in% c("kebele")) |> 
-  select(code, kebele = label)
-
-# zone_to_kebele_info
-df_zone_to_kebele_info <- df_choices |> 
-  filter(list_name %in% c("kebele")) |> 
-  select(zone_code = zone, woreda_code = woreda, code, kebele = label) |> 
-  left_join(df_zone_info, by = c("zone_code" = "code")) |>
-  relocate(zone, .after = zone_code) |>
-  left_join(df_woreda_info, by = c("woreda_code" = "code")) |>
-  relocate(woreda, .after = woreda_code) |>
-  select(-c(zone_code, woreda_code))
 
 # functions for changing some options in the table
 dt_options_fewcols <- function(x){
@@ -137,56 +116,23 @@ dt_options_fewcols <- function(x){
 Surveys for deletion: **`r nrow(df_cl_deletion)`**,\
 Last date of data collection: **`r df_days_for_data_collection[length(df_days_for_data_collection)]`**.
 
-### Summary on the surveys per location by population group
-
-### Host community: **`r df_updated_tool_data %>% filter(pop_group == "host") %>% nrow()`** surveys
+### Summary on the surveys per location 
 
 ```{r, echo = FALSE}
-df_samp_per_location <- df_samples_required |> 
-  group_by(hh_kebele) |> 
-  summarise(required_samples = n())
+df_samp_per_location <- df_samples_required
 df_updated_tool_data |> 
-  filter(pop_group == "host") |> 
-  group_by(hh_kebele) |> 
-  summarise(number_of_surveys = n()) |> 
-  arrange(hh_kebele) |>  
-  full_join(df_samp_per_location, by = c("hh_kebele" = "hh_kebele")) |> 
-  mutate(required_samples = ifelse(is.na(required_samples), 0, required_samples)) |> 
-  left_join(df_cl_surveys_for_deletion, by = c("hh_kebele" = "hh_kebele")) |> 
-  mutate(number_of_surveys = ifelse(is.na(number_of_surveys), 0, number_of_surveys),
-         surveys_for_deletion = ifelse(is.na(surveys_for_deletion), 0, surveys_for_deletion),
-         int.surveys_and_deletion = number_of_surveys - surveys_for_deletion,
-         remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
-  select(-c(int.surveys_and_deletion)) |> 
-  mutate(hh_kebele = as.character(hh_kebele)) |> 
-  left_join(df_zone_to_kebele_info, by = c("hh_kebele" = "code")) |> 
-  relocate(c(zone, woreda, hh_kebele, kebele), .before = number_of_surveys) |>
-  dt_options_fewcols()
-```
-
-### IDPs community: **`r df_updated_tool_data %>% filter(pop_group == "idp") %>% nrow()`** surveys
-
-```{r, echo = FALSE}
-df_samp_per_location <- df_samples_required |> 
-  group_by(hh_kebele) |> 
-  summarise(required_samples = n())
-df_updated_tool_data |> 
-  filter(pop_group == "idp") |> 
-  group_by(hh_kebele) |> 
-  summarise(number_of_surveys = n()) |> 
-  arrange(hh_kebele) |>  
-  full_join(df_samp_per_location, by = c("hh_kebele" = "hh_kebele")) |> 
-  mutate(required_samples = ifelse(is.na(required_samples), 0, required_samples)) |> 
-  left_join(df_cl_surveys_for_deletion, by = c("hh_kebele" = "hh_kebele")) |> 
-  mutate(number_of_surveys = ifelse(is.na(number_of_surveys), 0, number_of_surveys),
-         surveys_for_deletion = ifelse(is.na(surveys_for_deletion), 0, surveys_for_deletion),
-         int.surveys_and_deletion = number_of_surveys - surveys_for_deletion,
-         remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
-  select(-c(int.surveys_and_deletion)) |> 
-  mutate(hh_kebele = as.character(hh_kebele)) |> 
-  left_join(df_zone_to_kebele_info, by = c("hh_kebele" = "code")) |> 
-  relocate(c(zone, woreda, hh_kebele, kebele), .before = number_of_surveys) |>
-  dt_options_fewcols()
+    group_by(hh_kebele) |> 
+    summarise(number_of_surveys = n()) |> 
+    arrange(hh_kebele) |> 
+    full_join(df_samp_per_location, by = c("hh_kebele" = "hh_kebele")) |>
+    mutate(required_samples = ifelse(is.na(required_samples), 0, required_samples)) |> 
+    left_join(df_cl_surveys_for_deletion, by = "hh_kebele") |> 
+    mutate(number_of_surveys = ifelse(is.na(number_of_surveys), 0, number_of_surveys),
+           surveys_for_deletion = ifelse(is.na(surveys_for_deletion), 0, surveys_for_deletion),
+           int.surveys_and_deletion = number_of_surveys - surveys_for_deletion,
+           remaining_surveys = required_samples - int.surveys_and_deletion ) |> 
+    select(-c(int.surveys_and_deletion)) |> 
+    dt_options_fewcols()
 ```
 
 ### Daily enumerator performance
@@ -195,17 +141,8 @@ The average survey time for all the data is: **`r get_average_survey_time(df_upd
 
 ```{r, echo = FALSE}
 df_enum_performance |> 
-group_by(hh_zone, hh_woreda, hh_kebele, start_date, enumerator_id) |>
-  summarise(number_of_interviews_done = n(), `average_survey_time(minutes)` = round(mean(int.survey_time_interval, na.rm = TRUE), 0)) |> 
-  left_join(df_zone_info, by = c("hh_zone" = "code")) |> 
-  relocate(zone, .after = hh_zone) |> 
-  left_join(df_woreda_info, by = c("hh_woreda" = "code")) |> 
-  relocate(woreda, .after = hh_woreda) |>
-  mutate(hh_kebele = as.character(hh_kebele)) |> 
-  left_join(df_kebele_info, by = c("hh_kebele" = "code")) |> 
-  relocate(kebele, .after = hh_kebele) |>
-  ungroup() |> 
-  select(-c(hh_zone, hh_woreda)) |> 
+  group_by(hh_woreda, hh_kebele, start_date, enumerator_id) |> 
+  summarise(number_of_interviews_done = n(), `average_survey_time(minutes)` =     round(mean(int.survey_time_interval, na.rm = TRUE), 0)) |> 
   dt_options_fewcols()
 ```
 
